Code style fixes using intelij